include/bindings.h

struct div_t {
  int quot;
  int rem;
};
struct ldiv_t {
  long quot;
  long rem;
};
struct lldiv_t {
  long long quot;
  long long rem;
};
extern uintptr_t __ctype_get_mb_cur_max();
extern double atof(const char *__nptr);
extern int atoi(const char *__nptr);
extern long atol(const char *__nptr);
extern long long atoll(const char *__nptr);
extern double strtod(const char *__nptr, char **__endptr);
extern float strtof(const char *__nptr, char **__endptr);
extern u128 strtold(const char *__nptr, char **__endptr);
extern long strtol(const char *__nptr, char **__endptr, int __base);
extern unsigned long strtoul(const char *__nptr, char **__endptr, int __base);
extern long long strtoq(const char *__nptr, char **__endptr, int __base);
extern unsigned long long strtouq(const char *__nptr, char **__endptr, int __base);
extern long long strtoll(const char *__nptr, char **__endptr, int __base);
extern unsigned long long strtoull(const char *__nptr, char **__endptr, int __base);
extern char *l64a(long __n);
extern long a64l(const char *__s);